NetBeans/PerlOnNetBeans/PerlOnNetBeans/src/org/language/perl/grammar/PerlParser.java
// Generated from Perl.g4 by ANTLR 4.5
package org.language.perl.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PerlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, WHITESPACE=5, COMMENT=6, VARIABLE_SCOPE=7, 
		COMMANDS=8, SPECIAL_VAR=9, LBRACK=10, RBRACK=11, LPAREN=12, RPAREN=13, 
		LCURLY=14, RCURLY=15, COMMA=16, SEMI_COLON=17, COLON=18, DOT=19, BACKSLASH=20, 
		CARET=21, UNDERSCORE=22, PIPE=23, AMPERSAND=24, EQUAL=25, PLUS=26, MINUS=27, 
		MULTIPLY=28, DIVIDE=29, GT=30, LT=31, SQUOTE=32, DQUOTE=33, HASH_LITERAL=34, 
		QUESTIONMARK_LITERAL=35, EXCLAMATION_LITERAL=36, SCALAR_VAR=37, ARRAY_VAR=38, 
		HASH_VAR=39, DIGIT=40, VARIABLE=41, NUMBER=42, CHARACTERS=43, ESCAPE_SEQUENCE=44, 
		STRING=45;
	public static final int
		RULE_prog = 0, RULE_statements = 1, RULE_import_statements = 2, RULE_import_statement = 3, 
		RULE_package_declaration = 4, RULE_print_statement = 5, RULE_use_statement = 6, 
		RULE_require_statement = 7, RULE_variable_declaration = 8, RULE_comment_statements = 9, 
		RULE_comment_statement = 10;
	public static final String[] ruleNames = {
		"prog", "statements", "import_statements", "import_statement", "package_declaration", 
		"print_statement", "use_statement", "require_statement", "variable_declaration", 
		"comment_statements", "comment_statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'package'", "'print'", "'use'", "'require'", null, null, null, 
		null, null, "'['", "']'", "'('", "')'", "'{'", "'}'", "','", "';'", "':'", 
		"'.'", "'\\'", "'^'", "'_'", "'|'", "'&'", "'='", "'+'", "'-'", "'*'", 
		"'/'", "'>'", "'<'", "'''", "'\"'", "'#'", "'?'", "'!'", "'$'", "'@'", 
		"'%'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, "WHITESPACE", "COMMENT", "VARIABLE_SCOPE", 
		"COMMANDS", "SPECIAL_VAR", "LBRACK", "RBRACK", "LPAREN", "RPAREN", "LCURLY", 
		"RCURLY", "COMMA", "SEMI_COLON", "COLON", "DOT", "BACKSLASH", "CARET", 
		"UNDERSCORE", "PIPE", "AMPERSAND", "EQUAL", "PLUS", "MINUS", "MULTIPLY", 
		"DIVIDE", "GT", "LT", "SQUOTE", "DQUOTE", "HASH_LITERAL", "QUESTIONMARK_LITERAL", 
		"EXCLAMATION_LITERAL", "SCALAR_VAR", "ARRAY_VAR", "HASH_VAR", "DIGIT", 
		"VARIABLE", "NUMBER", "CHARACTERS", "ESCAPE_SEQUENCE", "STRING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Perl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PerlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PerlParser.EOF, 0); }
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(22);
				statements();
				}
				}
				setState(25); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << COMMENT) | (1L << VARIABLE_SCOPE) | (1L << LPAREN) | (1L << VARIABLE))) != 0) );
			setState(27);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public Import_statementsContext import_statements() {
			return getRuleContext(Import_statementsContext.class,0);
		}
		public Comment_statementsContext comment_statements() {
			return getRuleContext(Comment_statementsContext.class,0);
		}
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public Print_statementContext print_statement() {
			return getRuleContext(Print_statementContext.class,0);
		}
		public Package_declarationContext package_declaration() {
			return getRuleContext(Package_declarationContext.class,0);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		try {
			setState(34);
			switch (_input.LA(1)) {
			case T__2:
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				import_statements();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(30);
				comment_statements();
				}
				break;
			case VARIABLE_SCOPE:
			case LPAREN:
			case VARIABLE:
				enterOuterAlt(_localctx, 3);
				{
				setState(31);
				variable_declaration();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 4);
				{
				setState(32);
				print_statement();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 5);
				{
				setState(33);
				package_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_statementsContext extends ParserRuleContext {
		public List<Import_statementContext> import_statement() {
			return getRuleContexts(Import_statementContext.class);
		}
		public Import_statementContext import_statement(int i) {
			return getRuleContext(Import_statementContext.class,i);
		}
		public Import_statementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).enterImport_statements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).exitImport_statements(this);
		}
	}

	public final Import_statementsContext import_statements() throws RecognitionException {
		Import_statementsContext _localctx = new Import_statementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_import_statements);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(36);
					import_statement();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(39); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_statementContext extends ParserRuleContext {
		public List<Use_statementContext> use_statement() {
			return getRuleContexts(Use_statementContext.class);
		}
		public Use_statementContext use_statement(int i) {
			return getRuleContext(Use_statementContext.class,i);
		}
		public List<Require_statementContext> require_statement() {
			return getRuleContexts(Require_statementContext.class);
		}
		public Require_statementContext require_statement(int i) {
			return getRuleContext(Require_statementContext.class,i);
		}
		public Import_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).enterImport_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).exitImport_statement(this);
		}
	}

	public final Import_statementContext import_statement() throws RecognitionException {
		Import_statementContext _localctx = new Import_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_import_statement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(43); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(43);
					switch (_input.LA(1)) {
					case T__2:
						{
						setState(41);
						use_statement();
						}
						break;
					case T__3:
						{
						setState(42);
						require_statement();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(45); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Package_declarationContext extends ParserRuleContext {
		public TerminalNode SEMI_COLON() { return getToken(PerlParser.SEMI_COLON, 0); }
		public List<TerminalNode> CHARACTERS() { return getTokens(PerlParser.CHARACTERS); }
		public TerminalNode CHARACTERS(int i) {
			return getToken(PerlParser.CHARACTERS, i);
		}
		public List<TerminalNode> COLON() { return getTokens(PerlParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(PerlParser.COLON, i);
		}
		public Package_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).enterPackage_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).exitPackage_declaration(this);
		}
	}

	public final Package_declarationContext package_declaration() throws RecognitionException {
		Package_declarationContext _localctx = new Package_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_package_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(T__0);
			{
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48);
				match(CHARACTERS);
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CHARACTERS );
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COLON) {
				{
				{
				setState(53);
				match(COLON);
				setState(54);
				match(COLON);
				{
				setState(56); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(55);
					match(CHARACTERS);
					}
					}
					setState(58); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CHARACTERS );
				}
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(65);
			match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Print_statementContext extends ParserRuleContext {
		public List<TerminalNode> VARIABLE() { return getTokens(PerlParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(PerlParser.VARIABLE, i);
		}
		public List<TerminalNode> SPECIAL_VAR() { return getTokens(PerlParser.SPECIAL_VAR); }
		public TerminalNode SPECIAL_VAR(int i) {
			return getToken(PerlParser.SPECIAL_VAR, i);
		}
		public List<TerminalNode> SEMI_COLON() { return getTokens(PerlParser.SEMI_COLON); }
		public TerminalNode SEMI_COLON(int i) {
			return getToken(PerlParser.SEMI_COLON, i);
		}
		public Print_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).enterPrint_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).exitPrint_statement(this);
		}
	}

	public final Print_statementContext print_statement() throws RecognitionException {
		Print_statementContext _localctx = new Print_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_print_statement);
		int _la;
		try {
			setState(106);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				match(T__1);
				setState(68);
				_la = _input.LA(1);
				if ( !(_la==SPECIAL_VAR || _la==VARIABLE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(69);
					match(SEMI_COLON);
					}
					}
					setState(72); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SEMI_COLON );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				match(T__1);
				setState(75);
				match(LPAREN);
				setState(76);
				match(VARIABLE);
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(77);
					match(COMMA);
					setState(78);
					match(VARIABLE);
					}
					}
					setState(83);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(84);
				match(RPAREN);
				setState(86); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(85);
					match(SEMI_COLON);
					}
					}
					setState(88); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SEMI_COLON );
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				match(T__1);
				setState(91);
				match(LPAREN);
				setState(92);
				match(SPECIAL_VAR);
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(93);
					match(COMMA);
					setState(94);
					match(SPECIAL_VAR);
					}
					}
					setState(99);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(100);
				match(RPAREN);
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(101);
					match(SEMI_COLON);
					}
					}
					setState(104); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SEMI_COLON );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Use_statementContext extends ParserRuleContext {
		public TerminalNode SEMI_COLON() { return getToken(PerlParser.SEMI_COLON, 0); }
		public List<TerminalNode> CHARACTERS() { return getTokens(PerlParser.CHARACTERS); }
		public TerminalNode CHARACTERS(int i) {
			return getToken(PerlParser.CHARACTERS, i);
		}
		public List<TerminalNode> COLON() { return getTokens(PerlParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(PerlParser.COLON, i);
		}
		public TerminalNode STRING() { return getToken(PerlParser.STRING, 0); }
		public Use_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_use_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).enterUse_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).exitUse_statement(this);
		}
	}

	public final Use_statementContext use_statement() throws RecognitionException {
		Use_statementContext _localctx = new Use_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_use_statement);
		int _la;
		try {
			setState(137);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				match(T__2);
				{
				setState(110); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(109);
					match(CHARACTERS);
					}
					}
					setState(112); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CHARACTERS );
				}
				setState(114);
				match(SEMI_COLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				match(T__2);
				{
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(116);
					match(CHARACTERS);
					}
					}
					setState(119); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==CHARACTERS );
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COLON) {
					{
					{
					setState(121);
					match(COLON);
					setState(122);
					match(COLON);
					{
					setState(124); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(123);
						match(CHARACTERS);
						}
						}
						setState(126); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==CHARACTERS );
					}
					}
					}
					setState(132);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				setState(133);
				match(SEMI_COLON);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				match(T__2);
				setState(135);
				match(STRING);
				setState(136);
				match(SEMI_COLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Require_statementContext extends ParserRuleContext {
		public TerminalNode SEMI_COLON() { return getToken(PerlParser.SEMI_COLON, 0); }
		public List<TerminalNode> CHARACTERS() { return getTokens(PerlParser.CHARACTERS); }
		public TerminalNode CHARACTERS(int i) {
			return getToken(PerlParser.CHARACTERS, i);
		}
		public List<TerminalNode> COLON() { return getTokens(PerlParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(PerlParser.COLON, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(PerlParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(PerlParser.DIGIT, i);
		}
		public List<TerminalNode> DOT() { return getTokens(PerlParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(PerlParser.DOT, i);
		}
		public TerminalNode STRING() { return getToken(PerlParser.STRING, 0); }
		public Require_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_require_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).enterRequire_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PerlListener ) ((PerlListener)listener).exitRequire_statement(this);
		}
	}
